fix: handle hover bg color and text overflow

--- a/src/components/reusable/overflowMenu/overflowMenu.scss
+++ b/src/components/reusable/overflowMenu/overflowMenu.scss
@@ -31,6 +31,7 @@ button {
   margin-top: 8px;
   border-radius: 4px;
   background: var(--background-ui-default);
+  overflow: hidden;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.12),
     0px 4px 12px 0px rgba(0, 0, 0, 0.08);
   transition: transform 150ms ease-out, opacity 150ms ease-out,
