--- a/src/components/reusable/overflowMenu/overflowMenuItem.scss
+++ b/src/components/reusable/overflowMenu/overflowMenuItem.scss
@@ -17,6 +17,8 @@
   font: inherit;
   color: inherit;
   text-decoration: none;
+  overflow: hidden;
+  text-overflow: ellipsis;
   transition: background-color 0.15s ease-out;
 
   &:hover {
